[gd_scene load_steps=10 format=3 uid="uid://c2kgyu7dbn4u6"]

[ext_resource type="Theme" uid="uid://qkvjcwtwjvf7" path="res://nodes/ui/menu_theme.tres" id="2_115q6"]
[ext_resource type="Script" path="res://nodes/ui/menu_home/menu_home.gd" id="2_o4ovo"]
[ext_resource type="AudioStream" uid="uid://c7f6td0l0h1fo" path="res://sounds/select.wav" id="3_15ojn"]
[ext_resource type="FontFile" uid="uid://bqpc54kwlsemi" path="res://fonts/ttfs/LBRITEI.TTF" id="3_pa4p3"]
[ext_resource type="FontFile" uid="uid://byiibonho3vmb" path="res://fonts/ttfs/OLDENGL.TTF" id="4_3rir7"]
[ext_resource type="AudioStream" uid="uid://buncr3abmxsi6" path="res://sounds/hover.wav" id="4_gbhxy"]

[sub_resource type="LabelSettings" id="LabelSettings_84tu0"]
font = ExtResource("3_pa4p3")
font_size = 180

[sub_resource type="LabelSettings" id="LabelSettings_0ekuy"]
font = ExtResource("4_3rir7")
font_size = 256

[sub_resource type="LabelSettings" id="LabelSettings_fjw66"]
font_size = 32

[node name="menu_home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_o4ovo")

[node name="vbox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(540, 960)
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_115q6")
alignment = 1

[node name="staticSpacer" type="Control" parent="vbox"]
custom_minimum_size = Vector2(200, 224)
layout_mode = 2

[node name="title" type="HBoxContainer" parent="vbox"]
layout_mode = 2
alignment = 1

[node name="pickle" type="Label" parent="vbox/title"]
layout_mode = 2
text = "pickle"
label_settings = SubResource("LabelSettings_84tu0")

[node name="bardt" type="Label" parent="vbox/title"]
layout_mode = 2
text = "bardt"
label_settings = SubResource("LabelSettings_0ekuy")

[node name="DescriptionLabel" type="Label" parent="vbox"]
layout_mode = 2
text = "a pickleball match tracker"
label_settings = SubResource("LabelSettings_fjw66")
horizontal_alignment = 1

[node name="expandingSpacer" type="Control" parent="vbox"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 3

[node name="buttons" type="VBoxContainer" parent="vbox"]
layout_mode = 2
alignment = 1

[node name="manageParticipants" type="Button" parent="vbox/buttons" groups=["menu_buttons"]]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
theme = ExtResource("2_115q6")
text = "MANAGE PARTICIPANTS"

[node name="changeRules" type="Button" parent="vbox/buttons" groups=["menu_buttons"]]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
text = "CHANGE RULESET"

[node name="staticSpacer2" type="Control" parent="vbox"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2

[node name="generateBracketHbox" type="HBoxContainer" parent="vbox"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="staticSpacer" type="Control" parent="vbox/generateBracketHbox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="generateBracket" type="Button" parent="vbox/generateBracketHbox" groups=["menu_buttons"]]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 120
text = "GENERATE
BRACKET"

[node name="staticSpacer2" type="Control" parent="vbox/generateBracketHbox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="expandingSpacer3" type="Control" parent="vbox"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="version" type="Label" parent="vbox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "version"
horizontal_alignment = 2

[node name="selectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_15ojn")

[node name="hoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gbhxy")

[connection signal="pressed" from="vbox/buttons/manageParticipants" to="." method="_on_manage_participants_pressed"]
[connection signal="pressed" from="vbox/buttons/changeRules" to="." method="_on_change_rules_pressed"]
[connection signal="pressed" from="vbox/generateBracketHbox/generateBracket" to="." method="_on_generate_bracket_pressed"]
